--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
 
         <activity android:name=".mvp.login.view.LoginMVPActivity"/>
         <activity android:name=".ui.MyTestMainActivity"/>
+
+        <!-- Test Activity-->
+        <activity android:name=".test.recycleviewdemo.RecyclerViewActivity"/>
+
     </application>
 
 </manifest>
