--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+
+    compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     testCompile 'junit:junit:4.12'
 }
