--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
 
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
+    compile 'com.zhy:base-rvadapter:3.0.3'
     testCompile 'junit:junit:4.12'
 }
