--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
 
+    compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'com.zhy:base-rvadapter:3.0.3'
-    testCompile 'junit:junit:4.12'
+
+    compile 'io.reactivex:rxjava:1.0.14'
 }
