--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity android:name=".ui.MyTestMainActivity"/>
 
         <!-- Test Activity-->
-        <activity android:name=".test.recycleviewdemo.RecyclerViewActivity"/>
+        <activity android:name=".mytest.recycleviewdemo.RecyclerViewActivity"/>
 
     </application>
 
