--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <!-- Test Activity-->
         <activity android:name=".mytest.recycleviewdemo.RecyclerViewActivity"/>
+        <activity android:name=".mytest.recycleviewdemo.sample.RecyclerViewActivity2"/>
 
     </application>
 
