--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <!-- Test Activity-->
         <activity android:name=".mytest.recycleviewdemo.RecyclerViewActivity"/>
         <activity android:name=".mytest.recycleviewdemo.sample.RecyclerViewActivity2"/>
+        <activity android:name=".mytest.recycleviewdemo.sample.MultiItemRvActivity"/>
+        <activity android:name=".ui.MySamplesActivity"/>
 
     </application>
 
