--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".mytest.recycleviewdemo.sample.RecyclerViewActivity2"/>
         <activity android:name=".mytest.recycleviewdemo.sample.MultiItemRvActivity"/>
         <activity android:name=".ui.MySamplesActivity"/>
+        <activity android:name=".mytest.rxjavademo.RxJavaDemoActivity"/>
 
     </application>
 
