--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "net.yuanjin"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -14,28 +14,35 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
-
     compile 'io.reactivex:rxjava:1.0.14'
-
     compile project(':yuanjin-ormlib')
     compile project(':yuanjin-common')
     compile project(':yuanjin-widgetlib')
     compile 'com.squareup.picasso:picasso:2.5.2'
-//    compile 'com.squareup.okhttp:okhttp:2.5.0'
-//    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    //    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    //    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile files('libs/Xg_sdk_v2.47_20161026_0936.jar')
+    compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
+    compile files('libs/jg_filter_sdk_1.1.jar')
+//    compile files('libs/android-support-v4.jar')
 }
