--- a/yuanjin-widgetlib/build.gradle
+++ b/yuanjin-widgetlib/build.gradle
@@ -16,7 +16,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -30,7 +30,8 @@ dependencies {
     compile project(':yuanjin-common')
     testCompile 'junit:junit:4.12'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
+//    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.commit451:PhotoView:1.2.5'
 
 }
