--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     //编译环境的集合
     def apiContainer = new ApiContainer();
     //默认测试环境
-    def defaultApi = apiContainer.AliUkeRELEASE
+    def defaultApi = apiContainer.Baidu
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
@@ -17,14 +17,28 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
 
-        buildConfigField("String","API_HOST","\"$defaultApi.apiHost\"")
-        buildConfigField("String","Tencent","\"http://tencent.com\"")
+        buildConfigField("String","Url","\"$defaultApi.url\"") //括号可去掉
     }
 
     buildTypes {//构建的类型方式
-        release {//release方式，一般这种是定义为正式包渠道
-            minifyEnabled false //编译时是否混淆的开关
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        release {//release方式，一般这种是定义为正式包渠道
+//            minifyEnabled false //编译时是否混淆的开关
+////            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//
+//        }
+    }
+
+    //多渠道打包
+    productFlavors{
+        apiContainer.apiFlavors.each {//对apiFlavors 进行迭代，类似于foreach效果
+            def api = it
+            "$api.name" {
+                applicationId api.appId
+                minSdkVersion rootProject.ext.minSdkVersion
+                buildConfigField("String","Url","\"$api.url\"")
+
+            }
+
         }
     }
 
@@ -33,15 +47,19 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    buildToolsVersion '25.0.2'
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs') //编译的文件树
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //编译的文件树
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12' //测试项目需要引用的
-    compile 'com.android.support:appcompat-v7:23.4.0' //正常项目需要引用的
+    testCompile 'junit:junit:4.12'
+    //测试项目需要引用的
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    //正常项目需要引用的
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'io.reactivex:rxjava:1.0.14'
@@ -54,5 +72,8 @@ dependencies {
     compile files('libs/Xg_sdk_v2.47_20161026_0936.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
     compile files('libs/jg_filter_sdk_1.1.jar')
-//    compile files('libs/android-support-v4.jar')
+    //    compile files('libs/android-support-v4.jar')
+    compile files('libs/rhino-1.7.7.1.jar')
+    compile 'com.bluelinelabs:logansquare:1.3.6'
+
 }
