--- a/yuanjin-widgetlib/build.gradle
+++ b/yuanjin-widgetlib/build.gradle
@@ -21,16 +21,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile project(':yuanjin-common')
     testCompile 'junit:junit:4.12'
-
-//    compile 'com.squareup.picasso:picasso:2.5.2'
+    //    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.commit451:PhotoView:1.2.5'
-
+    compile files('D:/Android/GitProject/YuanJinPAAS/YuanJin/app/libs/gson-2.2.4.jar')
 }
