--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     compile files('libs/jg_filter_sdk_1.1.jar')
     //    compile files('libs/android-support-v4.jar')
     compile files('libs/rhino-1.7.7.1.jar')
+
+    compile 'org.ow2.asm:asm:5.0.3'
+    compile 'org.ow2.asm:asm-commons:5.0.3'
 }
