--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
 
     compile 'org.ow2.asm:asm:5.0.3'
     compile 'org.ow2.asm:asm-commons:5.0.3'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
