--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity android:name=".mytest.recycleviewdemo.RecyclerViewActivity"/>
         <activity android:name=".mytest.recycleviewdemo.sample.RecyclerViewActivity2"/>
         <activity android:name=".mytest.recycleviewdemo.sample.MultiItemRvActivity"/>
-        <activity android:name=".ui.MySamplesActivity"/>
+        <activity android:name=".ui.MySamplesBaseActivity"/>
         <activity android:name=".mytest.rxjavademo.RxJavaDemoActivity"/>
         <activity android:name=".mytest.picassodemo.PicassoSampleActivity"/>
         <activity android:name=".mytest.picassodemo.imageloader.XtionImageLoaderDemo"/>
@@ -62,6 +62,7 @@
         <activity android:name=".mytest.ConnectWithJS.JSActivity"/>
         <activity android:name=".mytest.mvp.simples.MVPActivity1"/>
         <activity android:name=".mytest.retrofitdemo.RetrofitDemoActivity"/>
+        <activity android:name=".mytest.viewstudy.ViewSamplesActivity"/>
         <activity android:name=".mytest.viewstudy.VelocityTrackerActivity"/>
 
 
