--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".mytest.viewstudy.VelocityTrackerActivity"/>
         <activity android:name=".mytest.viewstudy.GestureDectectorActivity"/>
         <activity android:name=".mytest.viewstudy.ScrollerActivity"/>
+        <activity android:name=".mytest.viewstudy.looppager.LoopPagerActivity"/>
 
 
         <!-- 【必须】 (2.30及以上版新增)展示通知的activity -->
