--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,9 @@ dependencies {
     compile files('libs/jg_filter_sdk_1.1.jar')
     //    compile files('libs/android-support-v4.jar')
     compile files('libs/rhino-1.7.7.1.jar')
-
     compile 'org.ow2.asm:asm:5.0.3'
     compile 'org.ow2.asm:asm-commons:5.0.3'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
